# clairvoy-travelb2b-agent

./: .gcloudignore  .gitignore  CLAUDE.md  Makefile  README.md  package-lock.json  package.json  pyproject.toml  run_agent.py  run_qa_matrix.py  test.html
.cloudbuild/: deploy-to-prod.yaml  pr_checks.yaml  staging.yaml
app/: __init__.py  agent.py  config.py  fast_api_app.py
app/app_utils/: telemetry.py  typing.py
app/callbacks/: __init__.py  pipeline_callbacks.py
app/frontend/: .env.local  README.md  tailwind.config.js
app/frontend/.next/: react-loadable-manifest.json  trace
app/frontend/.next/server/: middleware-react-loadable-manifest.js  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.json  webpack-runtime.js
app/frontend/.next/server/app/: page.js  page_client-reference-manifest.js
app/frontend/.next/server/vendor-chunks/: @0no-co.js  @ag-ui.js  @anthropic-ai.js  @aws-crypto.js  @aws-sdk.js  @aws.js  @babel.js  @bufbuild.js  @cfworker.js  @envelop.js  (+225 more)
app/frontend/app/: globals.css  layout.tsx  page.tsx
app/frontend/backend/: main.py
app/frontend/components/: CommercialTermsCard.tsx  DistributionPackageCard.tsx  GmvProjectionCard.tsx  HeroSection.tsx  Navbar.tsx  PipelineTimeline.tsx  RouteAnalysisCard.tsx  SupplierCard.tsx  ValidationSummaryCard.tsx  index.ts
app/schemas/: __init__.py  demand_schema.py  distribution_schema.py  report_schema.py  supplier_schema.py
app/sub_agents/: __init__.py
app/sub_agents/aftersales_agent/: __init__.py  agent.py
app/sub_agents/competitor_mapping/: agent.py
app/sub_agents/consolidator_agent/: __init__.py  agent.py
app/sub_agents/distribution_agent/: __init__.py  agent.py
app/sub_agents/gap_analysis/: agent.py
app/sub_agents/intake_agent/: agent.py
app/sub_agents/itinerary_agent/: __init__.py  agent.py
app/sub_agents/market_research/: agent.py
app/sub_agents/matching_agent/: __init__.py  agent.py
app/sub_agents/report_generator/: agent.py
app/sub_agents/strategy_advisor/: agent.py
app/sub_agents/validation_agent/: __init__.py  agent.py
app/tools/: __init__.py  bookings.py  destinations.py  fares.py  gds_search.py  html_report_generator.py
deployment/terraform/: variables.tf
deployment/terraform/dev/: variables.tf
deployment/terraform/dev/vars/: env.tfvars
deployment/terraform/vars/: env.tfvars
tests/integration/: test_server_e2e.py
tests/unit/: test_travel_tools.py
(+11 files in other folders)
